fix: layout for overflow bloglist

--- a/src/styles/Blog.module.scss
+++ b/src/styles/Blog.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   padding: 40px 20px 0 20px;
-  overflow-y: auto;
+  overflow: auto;
   min-height: 100%;
 
   @media only screen and (max-width: $mobile-width ) {
@@ -34,4 +34,5 @@
 
 .blogItem {
   flex:1;
+  overflow: auto;
 }
