--- a/src/styles/BlogItem.module.scss
+++ b/src/styles/BlogItem.module.scss
@@ -28,8 +28,18 @@
   li {
       line-height: 1.5em;
   }
+  pre {
+    width: 100%;
+    display: inline-block;
+    overflow-x: scroll;
+  }
+
+  ul {
+    width: 100%;
+  }
+
   a,
-  a:active, {
+  a:active {
     text-decoration: underline;
     color: #277BC0
   }
