--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -3,6 +3,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  cursor: pointer;
 }
 
 .description {
